src/OpenCvSharpExtern/features_Feature2D.h

CVAPI(ExceptionStatus) features_FastFeatureDetector_setNonmaxSuppression(cv::FastFeatureDetector *obj, int f)
{
    return cvTry([&] {
        obj->setNonmaxSuppression(f != 0);
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_getNonmaxSuppression(cv::FastFeatureDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getNonmaxSuppression() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_setType(cv::FastFeatureDetector *obj, int type)
{
    return cvTry([&] {
        obj->setType(static_cast<cv::FastFeatureDetector::DetectorType>(type));
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_getType(cv::FastFeatureDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = static_cast<int>(obj->getType());
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_create(
    int maxCorners,
    double qualityLevel,
    double minDistance,
    int blockSize,
    int useHarrisDetector,
    double k,
    cv::Ptr<cv::GFTTDetector> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::GFTTDetector::create(
            maxCorners, qualityLevel, minDistance,
            blockSize, useHarrisDetector != 0, k);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_GFTTDetector_delete(cv::Ptr<cv::GFTTDetector> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setMaxFeatures(cv::GFTTDetector *obj, int maxFeatures)
{
    return cvTry([&] {
        obj->setMaxFeatures(maxFeatures);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getMaxFeatures(cv::GFTTDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMaxFeatures();
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setQualityLevel(cv::GFTTDetector *obj, double qlevel)
{
    return cvTry([&] {
        obj->setQualityLevel(qlevel);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getQualityLevel(cv::GFTTDetector *obj, double *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getQualityLevel();
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setMinDistance(cv::GFTTDetector *obj, double minDistance)
{
    return cvTry([&] {
        obj->setMinDistance(minDistance);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getMinDistance(cv::GFTTDetector *obj, double *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMinDistance();
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setBlockSize(cv::GFTTDetector *obj, int blockSize)
{
    return cvTry([&] {
        obj->setBlockSize(blockSize);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getBlockSize(cv::GFTTDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getBlockSize();
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setHarrisDetector(cv::GFTTDetector *obj, int val)
{
    return cvTry([&] {
        obj->setHarrisDetector(val != 0);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getHarrisDetector(cv::GFTTDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getHarrisDetector() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_setK(cv::GFTTDetector *obj, double k)
{
    return cvTry([&] {
        obj->setK(k);
    });
}
CVAPI(ExceptionStatus) features_GFTTDetector_getK(cv::GFTTDetector *obj, double *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getK();
    });
}
struct SimpleBlobDetector_Params
{
    float thresholdStep;
    float minThreshold;
    float maxThreshold;
    uint32_t minRepeatability; // size_t
    float minDistBetweenBlobs;

    int filterByColor;
    uchar blobColor;

    int filterByArea;
    float minArea, maxArea;

    int filterByCircularity;
    float minCircularity, maxCircularity;

    int filterByInertia;
    float minInertiaRatio, maxInertiaRatio;

    int filterByConvexity;
    float minConvexity, maxConvexity;
};
CVAPI(ExceptionStatus) features_SimpleBlobDetector_create(
    SimpleBlobDetector_Params *p, cv::Ptr<cv::SimpleBlobDetector> **returnValue)
{
    return cvTry([&] {
        cv::SimpleBlobDetector::Params p2;
        if (p != nullptr)
        {
            p2.thresholdStep = p->thresholdStep;
            p2.minThreshold = p->minThreshold;
            p2.maxThreshold = p->maxThreshold;
            p2.minRepeatability = static_cast<size_t>(p->minRepeatability);
            p2.minDistBetweenBlobs = p->minDistBetweenBlobs;
            p2.filterByColor = p->filterByColor != 0;
            p2.blobColor = p->blobColor;
            p2.filterByArea = p->filterByArea != 0;
            p2.minArea = p->minArea;
            p2.maxArea = p->maxArea;
            p2.filterByCircularity = p->filterByCircularity != 0;
            p2.minCircularity = p->minCircularity;
            p2.maxCircularity = p->maxCircularity;
            p2.filterByInertia = p->filterByInertia != 0;
            p2.minInertiaRatio = p->minInertiaRatio;
            p2.maxInertiaRatio = p->maxInertiaRatio;
            p2.filterByConvexity = p->filterByConvexity != 0;
            p2.minConvexity = p->minConvexity;
            p2.maxConvexity = p->maxConvexity;
        }
        const auto ptr = cv::SimpleBlobDetector::create(p2);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_SimpleBlobDetector_delete(cv::Ptr<cv::SimpleBlobDetector> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_Ptr_Feature2D_get(cv::Ptr<cv::Feature2D> *obj, cv::Feature2D **returnValue)
{
    return cvTry([&] {
        *returnValue = obj->get();
    });
}
CVAPI(ExceptionStatus) features_AffineFeature_create(
    cv::Ptr<cv::Feature2D> *backend,
    int maxTilt,
    int minTilt,
    float tiltStep,
    float rotateStepBase,
    cv::Ptr<cv::AffineFeature> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::AffineFeature::create(*backend, maxTilt, minTilt, tiltStep, rotateStepBase);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_AffineFeature_setViewParams(
    cv::AffineFeature *obj,
    float *tilts,
    int tiltsLength,
    float *rolls,
    int rollsLength)
{
    return cvTry([&] {
        const std::vector<float> tiltsVec(tilts, tilts + tiltsLength);
        const std::vector<float> rollsVec(rolls, rolls + rollsLength);
        obj->setViewParams(tiltsVec, rollsVec);
    });
}
CVAPI(ExceptionStatus) features_AffineFeature_getViewParams(
    cv::AffineFeature *obj,
    std::vector<float> *tilts,
    std::vector<float> *rolls)
{
    return cvTry([&] {
        obj->getViewParams(*tilts, *rolls);
    });
}
CVAPI(ExceptionStatus) features_Ptr_AffineFeature_delete(cv::Ptr<cv::AffineFeature> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_DISK_create(
    const char *modelPath,
    int maxKeypoints,
    float scoreThreshold,
    interop::Size imageSize,
    int backendId,
    int targetId,
    cv::Ptr<cv::DISK> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::DISK::create(cv::String(modelPath), maxKeypoints, scoreThreshold, cpp(imageSize), backendId, targetId);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_DISK_create_buffer(
    const uchar *bufferModel,
    size_t bufferModelLength,
    int maxKeypoints,
    float scoreThreshold,
    interop::Size imageSize,
    int backendId,
    int targetId,
    cv::Ptr<cv::DISK> **returnValue)
{
    return cvTry([&] {
        const std::vector<uchar> buf(bufferModel, bufferModel + bufferModelLength);
        const auto ptr = cv::DISK::create(buf, maxKeypoints, scoreThreshold, cpp(imageSize), backendId, targetId);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_DISK_setMaxKeypoints(cv::DISK *obj, int maxKeypoints)
{
    return cvTry([&] {
        obj->setMaxKeypoints(maxKeypoints);
    });
}
CVAPI(ExceptionStatus) features_DISK_getMaxKeypoints(cv::DISK *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMaxKeypoints();
    });
}
CVAPI(ExceptionStatus) features_DISK_setScoreThreshold(cv::DISK *obj, float threshold)
{
    return cvTry([&] {
        obj->setScoreThreshold(threshold);
    });
}
CVAPI(ExceptionStatus) features_DISK_getScoreThreshold(cv::DISK *obj, float *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getScoreThreshold();
    });
}
CVAPI(ExceptionStatus) features_DISK_setImageSize(cv::DISK *obj, interop::Size size)
{
    return cvTry([&] {
        obj->setImageSize(cpp(size));
    });
}
CVAPI(ExceptionStatus) features_DISK_getImageSize(cv::DISK *obj, interop::Size *returnValue)
{
    return cvTry([&] {
        *returnValue = c(obj->getImageSize());
    });
}
CVAPI(ExceptionStatus) features_Ptr_DISK_delete(cv::Ptr<cv::DISK> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_ALIKED_create(
    const char *modelPath,
    interop::Size inputSize,
    int normalizeDescriptors,
    int engine,
    int backend,
    int target,
    cv::Ptr<cv::ALIKED> **returnValue)
{
    return cvTry([&] {
        cv::ALIKED::Params params;
        params.inputSize = cpp(inputSize);
        params.normalizeDescriptors = normalizeDescriptors != 0;
        params.engine = engine;
        params.backend = backend;
        params.target = target;
        const auto ptr = cv::ALIKED::create(cv::String(modelPath), params);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_ALIKED_create_buffer(
    const uchar *modelData,
    size_t modelDataLength,
    interop::Size inputSize,
    int normalizeDescriptors,
    int engine,
    int backend,
    int target,
    cv::Ptr<cv::ALIKED> **returnValue)
{
    return cvTry([&] {
        const std::vector<uchar> buf(modelData, modelData + modelDataLength);
        cv::ALIKED::Params params;
        params.inputSize = cpp(inputSize);
        params.normalizeDescriptors = normalizeDescriptors != 0;
        params.engine = engine;
        params.backend = backend;
        params.target = target;
        const auto ptr = cv::ALIKED::create(buf, params);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_ALIKED_delete(cv::Ptr<cv::ALIKED> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}